--- a/template.html
+++ b/template.html
@@ -3,17 +3,17 @@
 <head>
 <meta charset="utf-8">
 <link rel="stylesheet" href="../ZimStyles.css">
-<title> tab </title>
+<title>Maximortal </title>
 </head>
 
 <body>
-title <br>
-<img src=".jpg"> <br>
-Series: <br>
-Publisher: <br>
+<img src="Maximortal.jpg" title="Maximortal"> <img src="BoyMaximortal.jpg"><br>
+Series: 2 Graphic Novels<br>
+Publisher: King Hell<br>
 Written by <br>
 Illustrations by <br>
 <p>
+
 </p>
 </body>
 </html>
