planet of the apes

--- a/Phantom/Phantom.html
+++ b/Phantom/Phantom.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="../Ace/Ace143.jpg" title="Ace #143 The Phantom"> <br>
-Series: 1936 new strips, <br>
+Series: 1936 news strips. <br>
 Created by Lee Faulk<br>
 Publisher: King Features, DC, Marvel, Moonstone<br>
 <p>
