--- a/Punisher/Punisher.html
+++ b/Punisher/Punisher.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="Punisher.jpg" title="Punisher"> <br>
-Series: 5 issues 1985, 104 issues 1987 - 1995, 18 issues 1995 - 1997<br>
+Series: 5 issues 1985, 104 issues 1987 - 1995, 18 issues 1995 - 1997, 12 issues 2000 - 2001, 37 issues 2001 - 2004, 65 issues 2004 - 2009, 16 issues 2011 - 2012, 20 issues 2014 - 2015, 26 issues 2016 -2018<br>
 Publisher: Marvel<br>
 <p>
 The Punisher (Francis "Frank" Castle, born Castiglione) is a fictional character appearing in American comic books published by Marvel Comics. The character was created by writer Gerry Conway and artists John Romita Sr. and Ross Andru, with publisher Stan Lee green-lighting the name. The Punisher made his first appearance in <a href="https://blzim.github.io/kb/Creation/AmazingSpider-Man/AmazingSpiderMan129.html">The Amazing Spider-Man #129</a> (cover-dated Feb. 1974).
@@ -33,6 +33,16 @@ In feature films, Dolph Lundgren portrayed the Punisher in 1989, as did Thomas J
 <div class="mySlides" style="text-align: center;"><img src="Punisher3.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Punisher4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Punisher5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Punisher1987series1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Punisher1987series2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Punisher1995series1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Punisher1998series1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Punisher2000series1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Punisher2004series1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Punisher2009series1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Punisher2011series1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Punisher2014series1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Punisher2016series1.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
