--- a/SavageTales/SavageTales.html
+++ b/SavageTales/SavageTales.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="SavageTales1.jpg"> <br>
-Series: 11 issues 1971<br>
+Series: 11 issues 1971, 10 issues 2007<br>
 Publisher: Marvel, Dynamite<br>
 <p>
 <div class="row"><div class="column">
@@ -31,6 +31,25 @@ Publisher: Marvel, Dynamite<br>
 <div class="mySlides" style="text-align: center;"><img src="SavageTales9.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="SavageTales10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="SavageTales11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SavageTales2007series1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SavageTales2007series1b.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SavageTales2007series1c.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SavageTales2007series2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SavageTales2007series2b.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SavageTales2007series2c.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SavageTales2007series3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SavageTales2007series3b.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SavageTales2007series4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SavageTales2007series4b.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SavageTales2007series5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SavageTales2007series5b.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SavageTales2007series6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SavageTales2007series6b.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SavageTales2007series7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SavageTales2007series7b.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SavageTales2007series8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SavageTales2007series9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SavageTales2007series10.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
