--- a/Spaceman/Spaceman.html
+++ b/Spaceman/Spaceman.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<img src="Spaceman.jpg"> <br>
+<img src="Spaceman1.jpg"> <br>
 Series: 6 issues 1953 - 1954<br>
 Publisher: Atlas, Marvel<br>
 <p>
