--- a/slideshowTemplate.html
+++ b/slideshowTemplate.html
@@ -8,12 +8,10 @@
 </head>
 
 <body>
-<img src=".jpg" title="title"> <br>
-Series:<br>
+<img src="1.jpg"> <br>
+Series: <br>
 Publisher: <br>
 <p>
-
-</p><p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div> </div>
@@ -22,11 +20,14 @@ Publisher: <br>
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="Xmen001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="1.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
+</p><p>
+
+</p><p>
 
 </p>
 </body>
