--- a/MasterOfKungFu/MasterOfKungFu.html
+++ b/MasterOfKungFu/MasterOfKungFu.html
@@ -11,7 +11,7 @@
 Series: 109 issues (#17-125) 1974<br>
 Publisher: Marvel<br>
 <p>
-First issue #17, numbering continues from Special Marvel Edition.
+First issue #17, numbering continues from <a href="https://blzimg.github.io/SpecialMarvelEdition/SpecialMarvelEdition.html">Special Marvel Edition</a> #16.
 </p><p>
 The character Shang-Chi first appeared in Special Marvel Edition #15 (December 1973) by Steve Englehart and Jim Starlin. Shang-Chi appeared again in issue #16, and with issue #17 (April 1974) the title was changed to The Hands of Shang-Chi: Master of Kung Fu. Amidst the martial arts craze in the United States in the 1970s, the book became very popular, surviving until issue #125 (June 1983), a run including four giant-size issues and an annual.
 </p><p>
