--- a/slideshowTemplate.html
+++ b/slideshowTemplate.html
@@ -10,6 +10,7 @@
 <body>
 <img src="1.jpg"> <br>
 Series: <br>
+Created by <br>
 Publisher: <br>
 <p>
 <div class="row"><div class="column">
@@ -25,8 +26,6 @@ Publisher: <br>
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
-</p><p>
-
 </p><p>
 
 </p>
