--- a/SpicyAdventureStories/SpicyAdventureStories.html
+++ b/SpicyAdventureStories/SpicyAdventureStories.html
@@ -62,7 +62,7 @@ Publisher: Culture Publications<br>
 </p><p>
 Spicy-Adventure Stories was one of the notorious Spicy pulps published by Culture Publications in the late 1930s which concentrated on a simple formula - fast action stories laced with sex. It ran for nine years under that title before the forces of reform forced it to change to the rather more sedate Speed Adventure Stories.
 </p><p>
-Note that from late 1935 through late 1937, most issues appeared in two different versions - one uncensored and the other self-censored. The censored version was identifiable by a star within a box located at the top of the cover. Little information is known about the differences between these issues but some, at least, contained different stories and possibly had different covers. The covers for the censored versions are displayed in parallel below the uncensored covers.
+Note that from late 1935 through late 1937, most issues appeared in two different versions - one uncensored and the other self-censored. The censored version was identifiable by a star within a box located at the top of the cover. Little information is known about the differences between these issues but some, at least, contained different stories and possibly had different covers.
 </p>
 </body>
 </html>
