--- a/SpicyAdventureStories/SpicyAdventureStories.html
+++ b/SpicyAdventureStories/SpicyAdventureStories.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="../slideshow.css">
 <script src="../slideshow.js"></script>
-<title>title</title>
+<title>Spicy Adventure Stories</title>
 </head>
 
 <body>
