--- a/21Down/21Down.html
+++ b/21Down/21Down.html
@@ -8,7 +8,7 @@
 
 <body>
 <img src="21Down001.jpg"> <br>
-Series: 12 issues <br>
+Series: 12 issues 2002 - 2003<br>
 Publisher: Wildstorm, DC<br>
 Written by Jimmy Palmiotti, Justin Gray<br>
 Illustrations by Jesus Saiz<br>
