--- a/Maximortal/Maximortal.html
+++ b/Maximortal/Maximortal.html
@@ -7,12 +7,14 @@
 </head>
 
 <body>
-<img src="Maximortal.jpg" title="Maximortal"> <img src="BoyMaximortal.jpg"><br>
-Series: 2 Graphic Novels<br>
+<img src="Maximortal1.jpg" title="Maximortal"> <img src="Maximortal.jpg"><br>
+Series: 7 issues, 2 Graphic Novels<br>
 Publisher: King Hell<br>
 Created by Rick Veitch<br>
 <p>
 Seven years before The Amazing Adventures of Kavelier and Clay, Rick Veitch married the larcenous history of the comics business to the outrageous themes and characters of his infamous Brat Pack universe, creating one of the most startling and uncompromising visions of the super-hero archetype ever put to paper.
+</p><p>
+<img src="BoyMaximortal.jpg">
 </p><p>
 Boy Maximortal continues the story of True-Man, now a teenager hiding from an increasingly desperate military while trying to come to grips with powers far beyond those of normal men, all played against a backdrop of the sleazy underworld of comic book publishing. Veitch’s superhero deconstruction digs deep into the roots and heart of a cultural mythos that has come to define our times.
 </p>
