--- a/Silke/Silke.html
+++ b/Silke/Silke.html
@@ -4,11 +4,11 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="../slideshow.css">
 <script src="../slideshow.js"></script>
-<title>title</title>
+<title>Silke</title>
 </head>
 
 <body>
-<img src=".jpg" title="title"> <br>
+<img src="Silke1.jpg"> <br>
 Series: 4 issue mini series 2001<br>
 Publisher: Dark Horse<br>
 <p>
