--- a/slideshowTemplate.html
+++ b/slideshowTemplate.html
@@ -4,17 +4,29 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="../slideshow.css">
 <script src="../slideshow.js"></script>
-<title>Muties</title>
+<title>title</title>
 </head>
 
 <body>
-<img src="Muties.jpg"> <br>
-Series: 6 issues 2002<br>
-Publisher: Marvel<br>
+<img src=".jpg"> <br>
+Series: <br>
+Publisher:<br>
 <p>
-Muties is a six issue miniseries from Marvel Comics which ran from February to July 2002.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="1.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
 </p><p>
-It focused on six different Mutants, and each story was essentially self-contained. The miniseries was supposed to show the day-to-day sufferings of mutants, not just those that managed to find their way to the X-Men and Charles Xavier. It was written chiefly by Karl Bollers with different artists doing different issues.
+
 </p>
 </body>
 </html>
