--- a/SuperSoldiers/SuperSoldiers.html
+++ b/SuperSoldiers/SuperSoldiers.html
@@ -10,9 +10,17 @@
 <body>
 <img src="SuperSoldiers.jpg"> <br>
 Series: 8 issues 1993<br>
+Written by Michael Bennent and Lee Stevens<br>
+Illustrated by Andrew Currie and Rodney Ramos<br>
 Publisher: Marvel<br>
 <p>
-The UK's own super soldier meets the U.S.Agent in this first issue extravaganza! This series premiere packs hard hitting action, plus a silver embossed logo. Written by Michael Bennent and Lee Stevens. Art by Andrew Currie and Rodney Ramos. Cover by Andrew Currie and Cam Smith.
+Super Soldiers was a comic book published by the Marvel UK imprint of Marvel Comics in 1993. 
+</p><p>
+Part of the shared Marvel Universe setting, it centered on a team of superhuman British soldiers, with some plot aspects drawing on the background of Marvel's successful Captain America character. The Super Soldiers consisted mostly of individuals modified using biotechnology based on the American supersoldier codenamed Nuke. 
+</p><p>
+These characters were part of a British supersoldier program, which had been officially disbanded due to a mission gone wrong, and years later reformed along with other characters such as the rowdy mutant Guvnor, the Savage Land warrior woman Xantia, and the revived (after hibernating since the 1970s) martial artist Dragonfly, to work alongside S.H.I.E.L.D. and the U.S. Agent. 
+</p><p>
+In the eighth and final issue of the series, the unit found themselves privatised and their contracts sold to the Mercy Corporation as an "autonomous superhero response unit".
 </p>
 </body>
 </html>
