--- a/WildWest/WildWest.html
+++ b/WildWest/WildWest.html
@@ -9,10 +9,10 @@
 
 <body>
 <img src="WildWest.jpg"> <br>
-Series: 2 issues 1948<br>
-Publisher: Marvel<br>
+Series: 2 issues 1948, 55 issues 1948 - 1957 as Wild Western<br>
+Publisher: Atlas<br>
 <p>
-Western Anthology. Two-Gun Kid, Arizona Annie, and Tex Taylor begin. Cover by Shores. 
+Western Anthology. Two-Gun Kid, Arizona Annie, and Tex Taylor begin. Cover by Shores. Numbering continues with Wild Western #3
 </p>
 </body>
 </html>
