--- a/AdventureTime/AdventureTime.html
+++ b/AdventureTime/AdventureTime.html
@@ -26,6 +26,34 @@ Producer: Frederator Studios for Cartoon Network<br>
 <div class="mySlides" style="text-align: center;"><img src="PrincessBubblegum.jpg" title="Princess Bubblegum"></div>
 <div class="mySlides" style="text-align: center;"><img src="IceKing.jpg" title="Ice King"></div>
 <div class="mySlides" style="text-align: center;"><img src="MarcelineTheVampireQueen.jpg" title="Marceline The Vampire Queen"></div>
+<div class="mySlides" style="text-align: center;"><img src="BMO.jpg" title="BMO"></div>
+<div class="mySlides" style="text-align: center;"><img src="BMOinside.jpg" title="BMO inside"></div>
+<div class="mySlides" style="text-align: center;"><img src="LSP.jpg" title="Lumpy Space Princess"></div>
+<div class="mySlides" style="text-align: center;"><img src="FlamePrincess.jpg" title="Flame Princess"></div>
+<div class="mySlides" style="text-align: center;"><img src="LadyRainicorn.jpg" title="Lady Rainicorn"></div>
+<div class="mySlides" style="text-align: center;"><img src="TreeTrunks.jpg" title="Tree Trunks"></div>
+<div class="mySlides" style="text-align: center;"><img src="MartinMertens.jpg" title="Martin Mertens (Finn's Dad)"></div>
+<div class="mySlides" style="text-align: center;"><img src="BettyGrof.jpg" title="Betty Grof"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingOfOoo.jpg" title="King of Ooo"></div>
+<div class="mySlides" style="text-align: center;"><img src="HunsonAbadeer.jpg" title="Hunson Abadeer (Marceline's Dad)"></div>
+<div class="mySlides" style="text-align: center;"><img src="EarlOfLemongrab.jpg" title="Earl of Lemongrab"></div>
+<div class="mySlides" style="text-align: center;"><img src="PatienceStPim.jpg" title="Patience St. Pim"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fern.jpg" title="Fern"></div>
+<div class="mySlides" style="text-align: center;"><img src="Gumbald.jpg" title="Gumbald (Bubblegum's Uncle)"></div>
+<div class="mySlides" style="text-align: center;"><img src="Golb.jpg" title="Golb"></div>
+<div class="mySlides" style="text-align: center;"><img src="Lich.jpg" title="the Lich"></div>
+<div class="mySlides" style="text-align: center;"><img src="CinnamonBun.jpg" title="Cinnamon Bun"></div>
+<div class="mySlides" style="text-align: center;"><img src="PeppermintButler.jpg" title="Peppermint Butler"></div>
+<div class="mySlides" style="text-align: center;"><img src="Neptr.jpg" title="Never Ending Pie Throwing Robot"></div>
+<div class="mySlides" style="text-align: center;"><img src="Gunter.jpg" title="Gunter"></div>
+<div class="mySlides" style="text-align: center;"><img src="BillyLightning.jpg" title="Billy Lightning"></div>
+<div class="mySlides" style="text-align: center;"><img src="SusanStrong.jpg" title="Susan Strong"></div>
+<div class="mySlides" style="text-align: center;"><img src="Abracadaniel.jpg" title="Abracadaniel"></div>
+<div class="mySlides" style="text-align: center;"><img src="HuntressWizard.jpg" title="Huntress Wizard"></div>
+<div class="mySlides" style="text-align: center;"><img src="MagicMan.jpg" title="Magic Man"></div>
+<div class="mySlides" style="text-align: center;"><img src="Prismo.jpg" title="Prismo"></div>
+<div class="mySlides" style="text-align: center;"><img src="GlobGrod.jpg" title="Glob Glob Glob Grod"></div>
+<div class="mySlides" style="text-align: center;"><img src="Snail.jpg" title="the Snail"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
