--- a/Iliad/Iliad.html
+++ b/Iliad/Iliad.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<img src="Illiad.jpg"> <br>
+<img src="Iliad1.jpg"> <br>
 Homer 800 BC
 <p>
 The Iliad is an ancient Greek epic poem in dactylic hexameter, traditionally attributed to Homer. Set during the Trojan War, the ten-year siege of the city of Troy (Ilium) by a coalition of Greek states, it tells of the battles and events during the weeks of a quarrel between King Agamemnon and the warrior Achilles.
