--- a/1001ArabianNights/1001ArabianNights.html
+++ b/1001ArabianNights/1001ArabianNights.html
@@ -20,6 +20,11 @@ Translated from Arabic into French in 1704 by Antoine Galland<br>
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="1001ArabianNights1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="1001ArabianNights2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="1001ArabianNights3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="1001ArabianNights4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="1001ArabianNights5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="1001ArabianNights6.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
