--- a/WendyPini/WendyPini.html
+++ b/WendyPini/WendyPini.html
@@ -9,7 +9,7 @@
 
 <body>
 Wendy Pini<br>
-<img src="Pini1.jpg">
+<img src="WendyPini.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
