--- a/Residents/Residents.html
+++ b/Residents/Residents.html
@@ -12,7 +12,9 @@
 Series: 44 studio albums, various compilations and singles 1969 - Present<br>
 Publisher: Ralph Records, Cryptic Corp<br>
 <p>
-The Residents are an American art collective best known for avant-garde music and multimedia works. Since their first official release, Meet the Residents (1974), the group has released over sixty albums, numerous music videos and short films, three CD-ROM projects, and ten DVDs. They have undertaken seven major world tours and scored multiple films. Pioneers in exploring the potential of CD-ROM and similar technologies, the Residents have won several awards for their multimedia projects. Ralph Records, a record label focusing on avant-garde music, was started by the band.
+The Residents are an American art collective best known for avant-garde music and multimedia works. Since their first official release, Meet the Residents (1974), the group created their own label (Ralph Records) and has released over sixty albums, numerous music videos and short films, three CD-ROM projects, and ten DVDs. 
+</p><p>
+They have undertaken seven major world tours and scored multiple films. Pioneers in exploring the potential of CD-ROM and similar technologies, the Residents have won several awards for their multimedia projects. Ralph Records, a record label focusing on avant-garde music, was started by the band.
 </p><p>
 Throughout the group's existence, the individual members have ostensibly attempted to operate under anonymity, preferring instead to have attention focused on their art output. Much outside speculation and rumor has focused on this aspect of the group. In public, the group appears silent and costumed, often wearing eyeball helmets, top hats and tails, a long-lasting costume now recognized as its signature iconography.
 </p><p>
