--- a/ZipComics/ZipComics.html
+++ b/ZipComics/ZipComics.html
@@ -21,6 +21,8 @@ Publisher: MLJ<br>
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="ZipComics1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ZipComics2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ZipComics3.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
