--- a/StarControl/StarControl.html
+++ b/StarControl/StarControl.html
@@ -27,6 +27,8 @@ Publisher: Accolade 1990
 <div class="mySlides" style="text-align: center;"><img src="StarControl6.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="StarControl7.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="StarControl8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="StarControl9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="StarControl10.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
