--- a/slideshowTemplate.html
+++ b/slideshowTemplate.html
@@ -8,9 +8,8 @@
 </head>
 
 <body>
-<img src=".jpg"> <br>
-Series: <br>
-Publisher:<br>
+<img src=" "> <br>
+
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -20,7 +19,7 @@ Publisher:<br>
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src=" "></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
