--- a/Constantine/Constantine.html
+++ b/Constantine/Constantine.html
@@ -4,11 +4,11 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="../slideshow.css">
 <script src="../slideshow.js"></script>
-<title>title</title>
+<title>Constantine</title>
 </head>
 
 <body>
-<img src=" "> <br>
+<img src="Constantine1.jpg"> <br>
 
 <p>
 <div class="row"><div class="column">
@@ -19,13 +19,23 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=" "></div>
+<div class="mySlides" style="text-align: center;"><img src="Constantine1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Constantine2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Constantine3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Constantine4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Constantine5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Constantine6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Constantine7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Constantine8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Constantine9.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Constantine is a 2005 American occult detective film directed by Francis Lawrence, in his directorial debut, and starring Keanu Reeves as John Constantine. Rachel Weisz, Shia LaBeouf, Tilda Swinton, Pruitt Taylor Vince, and Djimon Hounsou co-star. With a screenplay by Kevin Brodbin and Frank Cappello, the film is based on DC Comics' Hellblazer comic book, with plot elements taken from the "Dangerous Habits" story arc (issues #41–46) and the "Original Sins" story arc. 
+Constantine is a 2005 American occult detective film directed by Francis Lawrence, in his directorial debut, and starring Keanu Reeves as John Constantine. Rachel Weisz, Shia LaBeouf, Tilda Swinton, Pruitt Taylor Vince, and Djimon Hounsou co-star. With a screenplay by Kevin Brodbin and Frank Cappello. 
+</p><p>
+The film is based on DC Comics' <a href="https://blzimg.github.io/Hellblazer/Hellblazer.html">Hellblazer</a> comic book, with plot elements taken from the "Dangerous Habits" story arc (issues #41–46) and the "Original Sins" story arc. 
 </p><p>
 The film portrays John Constantine as a cynic with the ability to perceive and communicate with half-angels and half-demons in their true form. He seeks salvation from eternal damnation in Hell for a suicide attempt in his youth. Constantine exorcises demons back to Hell to earn favor with Heaven but has become weary over time. With terminal lung cancer, he helps a troubled police detective learn the truth about her twin sister's death while simultaneously unraveling a much larger and darker plot.
 </p><p>
