--- a/SunRa/SunRa.html
+++ b/SunRa/SunRa.html
@@ -20,16 +20,41 @@ Sun Ra<br>
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="1956JazzBySunRa.jpg" title="1956 Jazz By Sun Ra"></div>
-<div class="mySlides" style="text-align: center;"><img src="1956SuperSonicJazz.jpg" title="1956 Super-Sonic Jazz"></div>
 <div class="mySlides" style="text-align: center;"><img src="1956SoundOfJoy.jpg" title="1956 Sound of Joy"></div>
-<div class="mySlides" style="text-align: center;"><img src="1958VisitsPlanetEarth.jpg" title="1958 Visits Planet Earth"></div>
+<div class="mySlides" style="text-align: center;"><img src="1956SuperSonicJazz.jpg" title="1956 Super-Sonic Jazz"></div>
 <div class="mySlides" style="text-align: center;"><img src="1958NubiansOfPlutonia.jpg" title="1958 Nubians of Plutonia"></div>
+<div class="mySlides" style="text-align: center;"><img src="1958VisitsPlanetEarth.jpg" title="1958 Visits Planet Earth"></div>
+<div class="mySlides" style="text-align: center;"><img src="1959InterstellarLowWays.jpg" title="1959 Interstellar Low Ways"></div>
 <div class="mySlides" style="text-align: center;"><img src="1959JazzInSilhouette.jpg" title="1959 Jazz In Silhouette"></div>
 <div class="mySlides" style="text-align: center;"><img src="1959SoundSunPleasure.jpg" title="1959 Sound Sun Pleasure!!"></div>
-<div class="mySlides" style="text-align: center;"><img src="1959InterstellarLowWays.jpg" title="1959 Interstellar Low Ways"></div>
+<div class="mySlides" style="text-align: center;"><img src="1961FuturisticSoundsOfSunRa.jpg" title="1961 Futuristic Sounds of Sun Ra"></div>
 <div class="mySlides" style="text-align: center;"><img src="1962SecretsOfTheSun.jpg" title="1962 Secrets of the Sun"></div>
+<div class="mySlides" style="text-align: center;"><img src="1963WhenAngelsSpeakOfLove.jpg" title="1963 When Angels Speak of Love"></div>
+<div class="mySlides" style="text-align: center;"><img src="1963WhenSunComesOut.jpg" title="1963 When Sun Comes Out"></div>
+<div class="mySlides" style="text-align: center;"><img src="1965AngelsAndDemonsAtPlay.jpg" title="1965 Angels And Demons At Play"></div>
+<div class="mySlides" style="text-align: center;"><img src="1965ArtFormsOfDimensionsTomorrow.jpg" title="1965 Art Forms Of Dimensions Tomorrow"></div>
+<div class="mySlides" style="text-align: center;"><img src="1965FateInPleasantMood.jpg" title="1965 Fate In A Pleasant Mood"></div>
+<div class="mySlides" style="text-align: center;"><img src="1965HeliocentricWorldsOfSunRa.jpg" title="1965 Heliocentric Worlds Of Sun Ra"></div>
+<div class="mySlides" style="text-align: center;"><img src="1966MonorailsAndSatellites.jpg" title="1966 Monorails And Satellites"></div>
+<div class="mySlides" style="text-align: center;"><img src="1966OtherPlanesOfThere.jpg" title="1966 Other Planes Of There"></div>
+<div class="mySlides" style="text-align: center;"><img src="1966TheHeliocentricWorldsofSunRaVol2.jpg" title="1966 The Heliocentric Worlds of Sun Ra Volume 2"></div>
+<div class="mySlides" style="text-align: center;"><img src="1966TheMagicCity.jpg" title="1966 The Magic City"></div>
 <div class="mySlides" style="text-align: center;"><img src="1967Atlantis.jpg" title="1967 Atlantis"></div>
 <div class="mySlides" style="text-align: center;"><img src="1967AtlantisB.jpg" title="1967 Atlantis (Re-Release Cover)"></div>
+<div class="mySlides" style="text-align: center;"><img src="1967CosmicTonesForMentalTherapy.jpg" title="1967 Cosmic Tones for Mental Therapy"></div>
+<div class="mySlides" style="text-align: center;"><img src="1967StrangeStrings.jpg" title="1967 Strange Strings"></div>
+<div class="mySlides" style="text-align: center;"><img src="1967WeTravelTheSpaceways.jpg" title="1967 We Travel The Spaceways"></div>
+<div class="mySlides" style="text-align: center;"><img src="1970HolidayforSoulDance.jpg" title="1970 Holiday for Soul Dance"></div>
+<div class="mySlides" style="text-align: center;"><img src="1970MyBrotherTheWind.jpg" title="1970 My Brother The Wind"></div>
+<div class="mySlides" style="text-align: center;"><img src="1970NightOfThePurpleMoon.jpg" title="1970 The Night of the Pruple Moon"></div>
+<div class="mySlides" style="text-align: center;"><img src="1970NothingIs.jpg" title="1970 Nothing Is"></div>
+<div class="mySlides" style="text-align: center;"><img src="1971SolarMythApproachVol1.jpg" title="1971 Solar Myth Approach Volume 1"></div>
+<div class="mySlides" style="text-align: center;"><img src="1971SolarMythApproachVol2.jpg" title="1971 Solar Myth Approach Volume 2"></div>
+<div class="mySlides" style="text-align: center;"><img src="1972AstroBlack.jpg" title="1972 Astro Black"></div>
+<div class="mySlides" style="text-align: center;"><img src="1972BadAndBeautiful.jpg" title="1972 Bad And Beautiful"></div>
+<div class="mySlides" style="text-align: center;"><img src="1972SpaceIsThePlaceSoundtrack.jpg" title="1972 Space Is The Place Soundtrack"></div>
+<div class="mySlides" style="text-align: center;"><img src="1973Disipline27.jpg" title="1973 Disipline 27-II"></div>
+<div class="mySlides" style="text-align: center;"><img src="1973SpaceIsThePlace.jpg" title="1973 Space Is The Place"></div>
 <div class="mySlides" style="text-align: center;"><img src="2014InTheOrbitOfRA.jpg" title="2014 In the Orbit of RA"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
