--- a/SunRa/SunRa.html
+++ b/SunRa/SunRa.html
@@ -54,7 +54,31 @@ Sun Ra<br>
 <div class="mySlides" style="text-align: center;"><img src="1972BadAndBeautiful.jpg" title="1972 Bad And Beautiful"></div>
 <div class="mySlides" style="text-align: center;"><img src="1972SpaceIsThePlaceSoundtrack.jpg" title="1972 Space Is The Place Soundtrack"></div>
 <div class="mySlides" style="text-align: center;"><img src="1973Disipline27.jpg" title="1973 Disipline 27-II"></div>
+<div class="mySlides" style="text-align: center;"><img src="1973FriendlyLove.jpg" title="1973 Friendly Love"></div>
+<div class="mySlides" style="text-align: center;"><img src="1973OuterSpaceEmploymentAgency.jpg" title="1973 Outer Space Employment Agency"></div>
 <div class="mySlides" style="text-align: center;"><img src="1973SpaceIsThePlace.jpg" title="1973 Space Is The Place"></div>
+<div class="mySlides" style="text-align: center;"><img src="1975PathwaysToUnknownWorlds.jpg" title="1975 Pathways To Unknown Worlds"></div>
+<div class="mySlides" style="text-align: center;"><img src="1976Cosmos.jpg" title="1976 Cosmos"></div>
+<div class="mySlides" style="text-align: center;"><img src="1977SoloPianoVolume1.jpg" title="1977 Solo Piano Volume 1"></div>
+<div class="mySlides" style="text-align: center;"><img src="1977SomeBluesButNotTheKindThatsBlue.jpg" title="1977 Some Blues But Not The Kind That's Blue"></div>
+<div class="mySlides" style="text-align: center;"><img src="1978Disco3000.jpg" title="1978 Disco 3000"></div>
+<div class="mySlides" style="text-align: center;"><img src="1978Lanquidity.jpg" title="1978 Lanquidity"></div>
+<div class="mySlides" style="text-align: center;"><img src="1978NewSteps.jpg" title="1978 New Steps"></div>
+<div class="mySlides" style="text-align: center;"><img src="1978OtherVoicesOtherBlues.jpg" title="1978 Other Voices Other Blues"></div>
+<div class="mySlides" style="text-align: center;"><img src="1978Visions.jpg" title="1978 Visions"></div>
+<div class="mySlides" style="text-align: center;"><img src="1979Omniverse.jpg" title="1979 Omniverse"></div>
+<div class="mySlides" style="text-align: center;"><img src="1979OnJupiter.jpg" title="1979 On Jupiter"></div>
+<div class="mySlides" style="text-align: center;"><img src="1979SleepingBeauty.jpg" title="1979 Sleeping Beauty"></div>
+<div class="mySlides" style="text-align: center;"><img src="1979StrangeCelestialRoad.jpg" title="1979 Strange Celestial Road"></div>
+<div class="mySlides" style="text-align: center;"><img src="1982NuclearWar.jpg" title="1982 Nuclear War"></div>
+<div class="mySlides" style="text-align: center;"><img src="1986HoursAfter.jpg" title="1986 Hours After"></div>
+<div class="mySlides" style="text-align: center;"><img src="1986ReflectionsInBlue.jpg" title="1986 Reflections in Blue"></div>
+<div class="mySlides" style="text-align: center;"><img src="1988HiddenFire1.jpg" title="1988 Hidden Fire 1"></div>
+<div class="mySlides" style="text-align: center;"><img src="1988HiddenFire2.jpg" title="1988 Hidden Fire 2"></div>
+<div class="mySlides" style="text-align: center;"><img src="1989BlueDelight.jpg" title="1989 Blue Delight"></div>
+<div class="mySlides" style="text-align: center;"><img src="1989SomewhereElse.jpg" title="1989 Somewhere Else"></div>
+<div class="mySlides" style="text-align: center;"><img src="1990MayanTemples.jpg" title="1990 Mayan Temples"></div>
+<div class="mySlides" style="text-align: center;"><img src="1990PurpleNight.jpg" title="1990 Purple Night"></div>
 <div class="mySlides" style="text-align: center;"><img src="2014InTheOrbitOfRA.jpg" title="2014 In the Orbit of RA"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
