--- a/RichardCorben/RichardCorbenOLD.html
+++ b/RichardCorben/RichardCorbenOLD.html
@@ -28,17 +28,15 @@ Richard Corben<br>
 </div></div>
 </p><p>
 
-<table id="myTable" class="tablesorter">
-<thead style="text-align:left">
+<table id="myTable">
 <tr>
-<th>Title</th>
-<th>Year&nbsp;</th>
-<th>Writer</th>
-<th>Publisher</th>
+<th onclick="sortTable(0)" style="text-align:left;">Title</th>
+<th onclick="sortTable(1)" style="text-align:left;">Year</th>
+<th onclick="sortTable(2)" style="text-align:left;">Writer</th>
+<th onclick="sortTable(3)" style="text-align:left;">Publisher</th>
 </tr>
-</thead>
-<tbody>
-<tr>
+
+  <tr>
     <td>The Plague</td>
 	<td>1969</td>
 	<td>Dennis Cunningham</td>
@@ -453,11 +451,7 @@ Richard Corben<br>
 </td></tr>
 <tr><td>Hellboy, Camazotz</td><td>2009</td><td>Mignola</td><td>Dark Horse
 </td></tr>
-</tbody>
 </table>
 
 </body>
-<script src="https://blzim.github.io/kb/jquery-3.3.1.min.js" type="text/javascript"></script>
-<script src="https://blzim.github.io/kb/jquery.tablesorter.min.js" type="text/javascript"></script>
-<script src="https://blzim.github.io/kb/jqsort.js" type="text/javascript"></script>
 </html>
