--- a/RichardCorben/RichardCorben.html
+++ b/RichardCorben/RichardCorben.html
@@ -22,6 +22,12 @@ Richard Corben<br>
 
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt8.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
