--- a/RichardCorben/RichardCorben.html
+++ b/RichardCorben/RichardCorben.html
@@ -28,6 +28,7 @@ Richard Corben<br>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt6.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt7.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt9.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
