--- a/Den/Den.html
+++ b/Den/Den.html
@@ -45,7 +45,9 @@ Den<br>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Den is the name of a planetary romance fictional characters created by Richard Corben. Den first appeared in the 1968 animated short film Neverwhere. Den has been appearing in the medium of comics since 1973, and in short stories that have been collected for the most part in trade paperbacks. Den also appeared in the animated film Heavy Metal.
+Den is the name of a fictional character created by <a href="../RichardCorben/RichardCorben.html">Richard Corben</a>. 
+</p><p>
+Den first appeared in the 1968 animated short film Neverwhere. Den has been appearing in the medium of comics since 1973, and in short stories that have been collected for the most part in trade paperbacks. Den also appeared in the animated film Heavy Metal.
 </p><p>
 Den is a young man named David Ellis Norman. Following directions left for him on a note and a diagram from his missing uncle Dan, David builds another electronic apparatus. The apparatus opens a gateway to a fantasy world named "Neverwhere", where he was transformed into a hairless, nude, muscular, and prodigiously endowed adventurer. 
 </p><p>
