--- a/RichardCorben/RichardCorben.html
+++ b/RichardCorben/RichardCorben.html
@@ -20,21 +20,53 @@ Richard Corben<br>
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt1.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt1.jpg" title="Den 1 Neverwhere"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt2.jpg" title="Bat Out of Hell"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt3.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt4.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt5.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt5.jpg" title="Twisted Tales #3"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt13.jpg" title="Hot Stuf' #3 (1976)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt6.jpg" title="Hot Stuf' #5 (1977)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt7.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt8.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt27.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-
+Richard Corben (born October 1, 1940) is an American illustrator and comic book artist best known for his character <a href="../Den/Den.html">Den</a>, featured in <a href="https://blzim.github.io/kb/Creation/HeavyMetal/HeavyMetal.html">Heavy Metal</a> the movie, as well as his comics featured in Heavy Metal magazine. He is the winner of the 2009 Spectrum Grand Master Award and the 2018 Grand Prix at Angouleme. In 2012 he was elected to the Will Eisner Award Hall of Fame.
+</p><p>
+After working as a professional animator, Corben started doing underground comics, including Grim Wit, Slow Death, Skull, Rowlf, Fever Dreams and his own anthology Fantagor. In 1970 he began illustrating horror and science-fiction stories for Warren Publishing.
+</p><p>
+His stories appeared in Creepy, Eerie, Vampirella, 1984 and Comix International. He also colored several episodes of Will Eisner's Spirit. All the stories and covers he did for Creepy and Eerie have been reprinted by Dark Horse Books in a single volume: Creepy Presents Richard Corben. The three stories he drew for Vampirella have been reprinted by Dynamite Entertainment in Vampirella Archives Vol. 5.
+</p><p>
+In 1976 Richard illustrated "Bloodstar" oublished by The Morning Star Press. Bloodstar is the first graphic novel to call itself a graphic novel (in its introduction and dust jacket), it was based on a short story by Robert E. Howard, the creator of Conan the Barbarian.
+</p><p>
+Corben did the cover of the debut studio album by American rock singer Meat Loaf "Bat Out of Hell". It is one of the best-selling albums of all time, having sold over 43 million copies worldwide.
+</p><p>
+From 1986–1994 Corben operated his own publishing imprint, Fantagor Press. Among the titles Fantagor published were <a href="../Den/Den.html">Den</a>, Den Saga, Horror in the Dark, Rip in Time, and Son of Mutant World. Fantagor went out of business after the 1994 contraction of the comics industry.
+</p><p>
+During this time he also contributed to other publications such as <a href="../VicAndBlood/VicAndBlood.html">Vic and Blood</a> for Mad Dog in 1987 and <a href="../TwistedTales/TwistedTales.html">Twisted Tales</a> for PC Comics.
+</p><p>
 <table id="myTable" class="tablesorter">
 <thead style="text-align:left">
 <tr>
@@ -250,7 +282,7 @@ Richard Corben<br>
 </td></tr>
 <tr><td>Spirit of the Beast</td><td>1985</td><td>Corben</td><td>Heavy Metal
 </td></tr>
-<tr><td>Twisted Tales illos</td><td>1985</td><td>Bruce Jones</td><td>Pacific
+<tr><td>Twisted Tales</td><td>1985</td><td>Bruce Jones</td><td>Pacific Comics
 </td></tr>
 <tr><td>Rip in Time</td><td>1986</td><td>Bruce Jones</td><td>Fantagor Press
 </td></tr>
